tjek og det virker

--- a/style.css
+++ b/style.css
@@ -3,5 +3,5 @@ Theme Name:    Child Theme eksamensprojekt
 Template:    oceanwp 
 Version:      1.0.0
 Description:  OceanWP Child Theme
-Author:      Katja Levring
+Author:      Katja Kurz Levring
 */
