--- a/custom.css
+++ b/custom.css
@@ -93,6 +93,15 @@
   border-radius: 3px;
 }
 
+.dropbtn-categori:hover,
+.dropbtn-kategori:hover,
+.dropbtn-kategori2:hover,
+.produkt_tilføj:hover,
+.tilføj_single:hover {
+  background-color: #becdda;
+  color: #000;
+}
+
 /* The container <div> - needed to position the dropdown content */
 .dropbtn-categori,
 .dropbtn-kategori,
@@ -229,7 +238,6 @@ figure {
   background-color: #f2efec;
   margin-block: 2rem;
   padding-block: 2rem;
-  margin-inline: 4rem;
 }
 
 .tekst_boks_produkter h1 {
@@ -251,6 +259,7 @@ figure {
   font-size: 14px;
   margin-bottom: 2rem;
   color: black;
+  font-weight: 300;
 }
 
 #artikel_single {
@@ -312,9 +321,9 @@ figure {
     padding-left: 1rem;
   }
 
-  .tekst_boks_produkter {
+  /* .tekst_boks_produkter {
     margin-inline: 10rem;
-  }
+  } */
 }
 
 /*********** MINI TABLET *************/
